--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.21.2",
     "sequelize-cli": "^6.4.1"
